fix(FEV-1394): fix scrollbar position (#22)
**the issue:**
scrollbar in playlist is moving the metadata text when it's rendered.

**solution:**
add visibility property and toggle it so it will not take space.

**additional changes:**
-  noticed that when playlist is positioned at the bottom- it is not responsive so fixed that also.

Solves [FEV-1394](https://kaltura.atlassian.net/browse/FEV-1394)

--- a/src/components/playlist-wrapper/playlist-wrapper.scss
+++ b/src/components/playlist-wrapper/playlist-wrapper.scss
@@ -7,17 +7,18 @@
   background: rgba(0, 0, 0, 0.6);
   backdrop-filter: blur(16px);
   &.vertical {
-    padding: 16px;
+    padding: 16px 4px 16px 16px;
     .playlistContent {
       flex-direction: column;
       overflow: hidden auto;
     }
   }
   &.horizontal {
-    padding: 8px 16px 16px 16px;
+    padding: 8px 16px 4px 16px;
     .playlistContent {
       flex-direction: row;
       overflow: auto hidden;
+      height: 100%;
     }
   }
 
@@ -25,9 +26,9 @@
     display: flex;
     width: 100%;
     @include playlist-scrollbar();
-    &.scrolling::-webkit-scrollbar {
-      width: 4px;
-      height: 4px;
+    &.scrolling::-webkit-scrollbar-track,
+    &.scrolling::-webkit-scrollbar-thumb, {
+      visibility: visible;
     }
   }
 
